--- a/Shared/LostAnimals.Common/LostAnimals.Common.csproj
+++ b/Shared/LostAnimals.Common/LostAnimals.Common.csproj
@@ -9,17 +9,18 @@
   <ItemGroup>
     <Folder Include="Exceptions\" />
     <Folder Include="Extensions\" />
-    <Folder Include="HealthCheck\" />
     <Folder Include="Helpers\" />
     <Folder Include="Validator\" />
     <Folder Include="Responses\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
