--- a/Services/LostAnimals.Services.Logger/LostAnimals.Services.Logger.csproj
+++ b/Services/LostAnimals.Services.Logger/LostAnimals.Services.Logger.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
     <PackageReference Include="Serilog.Enrichers.CorrelationId" Version="3.0.1" />
   </ItemGroup>
 
