Add database context fixes

--- a/Systems/Api/LostAnimals.Api/appsettings.json
+++ b/Systems/Api/LostAnimals.Api/appsettings.json
@@ -16,5 +16,18 @@
     "Enabled": true,
     "OAuthClientId": "lostanimals_web_client",
     "OAuthClientSecret": "A3F0811F2E934C4FB054CB693F7D785E"
+  },
+  "Database": {
+    "DbType": "PgSql",
+    "ConnectionString": "Server=localhost;Database=LostAnimals;User Id=postgres;Password=Passw0rd;TrustServerCertificate=True",
+    "Init": {
+      "AddDemoData": false,
+      "AddAdministrator": true,
+      "Administrator": {
+        "Name": "admin",
+        "Email": "admin@admin.ru",
+        "Password": "Password2345"
+      }
+    }
   }
 }
