--- a/Services/LostAnimals.Services.Notes/LostAnimals.Services.Notes.csproj
+++ b/Services/LostAnimals.Services.Notes/LostAnimals.Services.Notes.csproj
@@ -13,6 +13,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\Data\LostAnimals.Context\LostAnimals.Context.csproj" />
 	  <ProjectReference Include="..\LostAnimals.Services.Logger\LostAnimals.Services.Logger.csproj" />
 	</ItemGroup>
 
