--- a/Services/LostAnimals.Services.Breeds/LostAnimals.Services.Breeds.csproj
+++ b/Services/LostAnimals.Services.Breeds/LostAnimals.Services.Breeds.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Breeds\Models\" />
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Data\LostAnimals.Context.Entities\LostAnimals.Context.Entities.csproj" />
+    <ProjectReference Include="..\..\Data\LostAnimals.Context\LostAnimals.Context.csproj" />
   </ItemGroup>
 
 </Project>
