Added account service. Completed authorization. Changes in configurations.

--- a/Services/LostAnimals.Services.UserAccount/LostAnimals.Services.UserAccount.csproj
+++ b/Services/LostAnimals.Services.UserAccount/LostAnimals.Services.UserAccount.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Data\LostAnimals.Context.Entities\LostAnimals.Context.Entities.csproj" />
+    <ProjectReference Include="..\..\Data\LostAnimals.Context\LostAnimals.Context.csproj" />
     <ProjectReference Include="..\..\Shared\LostAnimals.Common\LostAnimals.Common.csproj" />
   </ItemGroup>
 
