--- a/Services/LostAnimals.Services.Comments/LostAnimals.Services.Comments.csproj
+++ b/Services/LostAnimals.Services.Comments/LostAnimals.Services.Comments.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Data\LostAnimals.Context.Entities\LostAnimals.Context.Entities.csproj" />
+    <ProjectReference Include="..\..\Data\LostAnimals.Context\LostAnimals.Context.csproj" />
+  </ItemGroup>
+
 </Project>
