--- a/Systems/Api/LostAnimals.Api/appsettings.json
+++ b/Systems/Api/LostAnimals.Api/appsettings.json
@@ -32,5 +32,12 @@
   },
   "Identity": {
     "Url": "http://localhost:5125"
+  },
+  "EmailSender": {
+    "From": "mailsenderapp@yandex.ru",
+    "SmtpServer": "smtp.yandex.ru",
+    "Port": 465,
+    "Username": "mailsenderapp@yandex.ru",
+    "Password": "ucawephilkcakrue"
   }
 }
