Added uploading photo to notes Changes in models

--- a/Services/LostAnimals.Services.Notes/LostAnimals.Services.Notes.csproj
+++ b/Services/LostAnimals.Services.Notes/LostAnimals.Services.Notes.csproj
@@ -16,6 +16,7 @@
 	  <ProjectReference Include="..\..\Data\LostAnimals.Context\LostAnimals.Context.csproj" />
 	  <ProjectReference Include="..\LostAnimals.Services.Comments\LostAnimals.Services.Comments.csproj" />
 	  <ProjectReference Include="..\LostAnimals.Services.Logger\LostAnimals.Services.Logger.csproj" />
+	  <ProjectReference Include="..\LostAnimals.Services.PhotoService\LostAnimals.Services.PhotoService.csproj" />
 	</ItemGroup>
 
 </Project>
