--- a/Systems/Api/LostAnimals.Api/LostAnimals.Api.csproj
+++ b/Systems/Api/LostAnimals.Api/LostAnimals.Api.csproj
@@ -49,8 +49,7 @@
     <ProjectReference Include="..\..\..\Services\LostAnimals.Services.Logger\LostAnimals.Services.Logger.csproj" />
     <ProjectReference Include="..\..\..\Services\LostAnimals.Services.NoteCategory\LostAnimals.Services.NoteCategories.csproj" />
     <ProjectReference Include="..\..\..\Services\LostAnimals.Services.Notes\LostAnimals.Services.Notes.csproj" />
-    <ProjectReference Include="..\..\..\Services\LostAnimals.Services.PhotoGallery\LostAnimals.Services.PhotoGalleries.csproj" />
-    <ProjectReference Include="..\..\..\Services\LostAnimals.Services.PhotoStorage\LostAnimals.Services.PhotoStorages.csproj" />
+    <ProjectReference Include="..\..\..\Services\LostAnimals.Services.PhotoService\LostAnimals.Services.PhotoService.csproj" />
     <ProjectReference Include="..\..\..\Services\LostAnimals.Services.Settings\LostAnimals.Services.Settings.csproj" />
     <ProjectReference Include="..\..\..\Services\LostAnimals.Services.UserAccount\LostAnimals.Services.UserAccount.csproj" />
     <ProjectReference Include="..\..\..\Shared\LostAnimals.Common\LostAnimals.Common.csproj" />
