--- a/Services/LostAnimals.Services.Comments/LostAnimals.Services.Comments.csproj
+++ b/Services/LostAnimals.Services.Comments/LostAnimals.Services.Comments.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Data\LostAnimals.Context.Entities\LostAnimals.Context.Entities.csproj" />
     <ProjectReference Include="..\..\Data\LostAnimals.Context\LostAnimals.Context.csproj" />
+    <ProjectReference Include="..\LostAnimals.Services.PhotoService\LostAnimals.Services.PhotoService.csproj" />
   </ItemGroup>
 
 </Project>
