--- a/Systems/Api/LostAnimals.Api/appsettings.json
+++ b/Systems/Api/LostAnimals.Api/appsettings.json
@@ -14,8 +14,8 @@
   },
   "Swagger": {
     "Enabled": true,
-    "OAuthClientId": "lostanimals_web_client",
-    "OAuthClientSecret": "A3F0811F2E934C4FB054CB693F7D785E"
+    "OAuthClientId": "client",
+    "OAuthClientSecret": "A3F0811F2E934C4F1114CB693F7D785E"
   },
   "Database": {
     "DbType": "PgSql",
