Changed gitignore. Created folders for ViewModels.

--- a/Systems/Api/LostAnimals.Api/LostAnimals.Api.csproj
+++ b/Systems/Api/LostAnimals.Api/LostAnimals.Api.csproj
@@ -58,6 +58,7 @@
 
   <ItemGroup>
     <Folder Include="%25logs\" />
+    <Folder Include="Controllers\ViewModels\Photo\" />
   </ItemGroup>
 
 </Project>
