--- a/Systems/Api/LostAnimals.Api/appsettings.json
+++ b/Systems/Api/LostAnimals.Api/appsettings.json
@@ -21,7 +21,7 @@
     "DbType": "PgSql",
     "ConnectionString": "Server=localhost;Database=LostAnimals;User Id=postgres;Password=Passw0rd;TrustServerCertificate=True",
     "Init": {
-      "AddDemoData": false,
+      "AddDemoData": true,
       "AddAdministrator": true,
       "Administrator": {
         "Name": "admin",
