--- a/Systems/Web/LostAnimals.Web/LostAnimals.Web.csproj
+++ b/Systems/Web/LostAnimals.Web/LostAnimals.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -11,14 +11,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.3" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="6.19.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Pages\Notes\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Shared\LostAnimals.ViewModels\LostAnimals.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
