--- a/Systems/Api/LostAnimals.Api/appsettings.json
+++ b/Systems/Api/LostAnimals.Api/appsettings.json
@@ -22,6 +22,7 @@
     "ConnectionString": "Server=localhost;Database=LostAnimals;User Id=postgres;Password=Passw0rd;TrustServerCertificate=True",
     "Init": {
       "AddDemoData": true,
+      "BreedsCsv": "../../../Data/LostAnimals.Context.Seeder/Seeds/DemoData/Breeds.csv",
       "AddAdministrator": true,
       "Administrator": {
         "Name": "admin",
